--- a/ansible/docker.yml
+++ b/ansible/docker.yml
@@ -53,7 +53,7 @@
     - name: Start the container
       docker_container:
         name: webapp
-        image: "anastasiamoiseenko/webapp:{{IMAGE_VERSION}}"
+        image: "anastasiamoiseenko/webapp:1.12"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
